--- a/client/styles/util.css
+++ b/client/styles/util.css
@@ -12,7 +12,7 @@
 
 body,
 html {
-  font-family: Arial, sans-serif;
+  /* font-family: Arial, sans-serif; */
   font-size: 15px;
   color: #666666;
 
