added about & contact page, aside; fix homepage

--- a/client/styles/Footer.css
+++ b/client/styles/Footer.css
@@ -6,18 +6,39 @@
   border-bottom: 1px solid #d8dbde;
 }
 
+.footer__top-box {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
 .footer__list {
   display: flex;
   justify-content: space-between;
   gap: 15px;
-  max-width: 640px;
+  max-width: 600px;
   width: 100%;
 }
 
-.footer__name {
+.footer__items--contacts .footer__item:not(:last-child) {
+  margin-bottom: 5px;
+}
+
+.footer__items--contacts .footer__item:not(:first-child) .footer__link,
+.footer__items--contacts .footer__item:not(:first-child) {
+  font-weight: 500;
+}
+
+.footer__item {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.footer__title {
   display: block;
-  margin: 0 0 1.25rem;
-  font-size: 1rem;
+  margin: 0 0 10px;
+  font-size: 18px;
   line-height: 1.4;
   font-weight: 700;
 }
@@ -25,12 +46,20 @@
 .footer__link {
   line-height: 2;
   font-weight: 300;
-  font-size: 0.875rem;
+  font-size: 14px;
   transition: color 0.5s ease;
 }
 
 .footer__link:hover {
   color: #e95c48;
+}
+
+.footer__link--phone {
+  line-height: 1;
+}
+
+.footer__address {
+  font-style: normal;
 }
 
 .footer__cards {
