--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -20,7 +20,7 @@ body {
   font-size: 16px;
   font-weight: 400;
   line-height: 1.25;
-  color: #231f20;
+  color: #363a43;
   background-color: #fff;
 }
 
@@ -32,6 +32,21 @@ body {
   max-width: 1472px;
   padding: 0 16px;
   margin: 0 auto;
+}
+
+.homepage-container__inner {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  gap: 30px;
+}
+
+.homepage-container__content {
+  max-width: 1140px;
+}
+
+.filterbar {
+  width: 300px;
+  flex-grow: 1;
 }
 
 .container-fluid {
@@ -209,4 +224,15 @@ body {
 .product-slider .swiper-pagination-bullet {
   background-color: rgba(0, 0, 0, 0.75);
   transition: background-color 0.5s ease;
+}
+
+.contacts {
+  padding-top: 50px;
+}
+
+.contacts__inner {
+  display: flex;
+  justify-content: center;
+  align-items: start;
+  gap: 50px;
 }
