--- a/client/styles/Header.css
+++ b/client/styles/Header.css
@@ -30,18 +30,48 @@
 .header__btn,
 .header__top-link {
   display: flex;
-  justify-content: center;
   align-items: center;
-  gap: 10px;
-  align-self: stretch;
+  justify-content: end;
   font-weight: 600;
   border-radius: 32px;
   padding: 0 16px;
   transition: background-color 0.5s ease;
+  position: relative;
+  min-height: 2.75rem;
+  padding: 0 1.125rem;
+  padding-left: 2.5rem;
+  max-width: 190px;
+  width: 100%;
 }
 
 .header__top-link {
+  max-width: 180px;
   background-color: transparent;
+}
+
+.header__top-link::before,
+.header__btn::before {
+  content: '';
+  position: absolute;
+  display: block;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 20px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+.header__top-link::before {
+  width: 22px;
+  height: 22px;
+  background-image: url('../asset/icons/add-user.svg');
+}
+
+.header__btn::before {
+  width: 20px;
+  height: 20px;
+  background-image: url('../asset/icons/user.png');
 }
 
 .header__top-link:hover {
@@ -60,30 +90,46 @@
 .header__list {
   display: flex;
   align-items: center;
-  gap: 15px;
+  gap: 20px;
   padding: 8px 0;
   font-weight: 500;
 }
 
-.header__item {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-}
-
-.header__item:first-child {
-  background-color: #000;
-  padding: 0 12px 0 18px;
-  height: 38px;
-  border-radius: 32px;
-}
-
-.header__item:first-child .header__link {
-  color: #fff;
-}
-
 .header__link {
-  display: flex;
-  align-items: center;
-  gap: 10px;
+  padding-left: 26px;
+  position: relative;
+}
+
+.header__link::before {
+  content: '';
+  position: absolute;
+  display: block;
+  width: 16px;
+  height: 16px;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 0;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+.header__link.header__link--about::before {
+  background-image: url('../asset/icons/about.svg');
+}
+
+.header__link.header__link--partners::before {
+  background-image: url('../asset/icons/partner.svg');
+}
+
+.header__link.header__link--news::before {
+  background-image: url('../asset/icons/news-icon.svg');
+}
+
+.header__link.header__link--contacts::before {
+  background-image: url('../asset/icons/contact.svg');
+}
+
+.header__link.header__link--offers::before {
+  background-image: url('../asset/icons/offers-icon.svg');
 }
