--- a/client/styles/edges.css
+++ b/client/styles/edges.css
@@ -1,6 +1,6 @@
 .edges__list {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
   gap: 15px;
 }
