--- a/client/styles/util.css
+++ b/client/styles/util.css
@@ -14,7 +14,7 @@ body,
 html {
   /* font-family: Arial, sans-serif; */
   font-size: 15px;
-  color: #666666;
+  /* color: #666666; */
 
   height: 100%;
   background-color: #fff;
