--- a/client/styles/Header.css
+++ b/client/styles/Header.css
@@ -28,7 +28,8 @@
 }
 
 .header__btn,
-.header__top-link {
+.header__top-link,
+.header__top-user {
   display: flex;
   align-items: center;
   justify-content: end;
@@ -44,13 +45,18 @@
   width: 100%;
 }
 
+.header__top-user {
+  max-width: 150px;
+}
+
 .header__top-link {
   max-width: 180px;
   background-color: transparent;
 }
 
 .header__top-link::before,
-.header__btn::before {
+.header__btn::before,
+.header__top-user::before {
   content: '';
   position: absolute;
   display: block;
@@ -74,7 +80,14 @@
   background-image: url('../asset/icons/user.png');
 }
 
-.header__top-link:hover {
+.header__top-user::before {
+  width: 20px;
+  height: 20px;
+  background-image: url('../asset/icons/user.svg');
+}
+
+.header__top-link:hover,
+.header__top-user:hover {
   background-color: #f4f6f7;
 }
 
