--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -236,3 +236,49 @@ body {
   align-items: start;
   gap: 50px;
 }
+
+.profile {
+  padding-top: 25px;
+}
+
+.profile__inner {
+  display: flex;
+  gap: 50px;
+}
+
+.profile__content {
+  width: 100%;
+  display: flex;
+  align-items: start;
+  flex-direction: column;
+}
+
+.profile__title {
+  font-size: 32px;
+  margin-bottom: 20px;
+}
+
+.profile__link {
+  font-size: 16px;
+  font-weight: 500;
+  text-transform: uppercase;
+  line-height: 1;
+  margin-bottom: 15px;
+  order: -1;
+  padding-left: 17px;
+  position: relative;
+}
+
+.profile__link::before {
+  content: '';
+  position: absolute;
+  display: block;
+  width: 12px;
+  height: 12px;
+  left: 0;
+  top: 1px;
+  background-image: url('../asset/icons/back-arrow.svg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
