--- a/client/styles/Header.css
+++ b/client/styles/Header.css
@@ -27,6 +27,26 @@
   flex-shrink: 0;
 }
 
+.header__menu-btn {
+  width: 42px;
+  height: 42px;
+  background-color: #f4f6f7;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+  border-radius: 50%;
+  display: none;
+}
+
+.header__btn-line {
+  height: 2px;
+  width: 20px;
+  background-color: #231f20;
+  border-radius: 10px;
+}
+
 .header__btn,
 .header__top-link,
 .header__top-user {
@@ -145,4 +165,53 @@
 
 .header__link.header__link--offers::before {
   background-image: url('../asset/icons/offers-icon.svg');
+}
+
+@media (max-width: 992px) {
+  .header__top-link,
+  .header__btn {
+    max-width: 42px;
+    min-height: 42px;
+    padding: 0;
+  }
+
+  .header__top-link span,
+  .header__btn span {
+    display: none;
+  }
+
+  .header__top-link::before,
+  .header__btn::before {
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+}
+
+@media (max-width: 768px) {
+  .header {
+    padding-bottom: 0;
+  }
+
+  .header__top {
+    flex-wrap: wrap;
+    padding: 10px 0;
+  }
+
+  .header__top .logo {
+    margin: 0 auto;
+    max-width: 130px;
+  }
+
+  .header__top-link {
+    margin-left: auto;
+  }
+
+  .header__list {
+    display: none;
+  }
+
+  .header__menu-btn {
+    display: flex;
+  }
 }
