--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -9,7 +9,7 @@ body {
 
 .wrapper {
   min-height: 100%;
-  padding-top: 148px;
+  padding-top: 128px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -120,103 +120,6 @@ body {
   margin-bottom: 25px;
 }
 
-.main-banner .swiper-container {
-  height: 100%;
-}
-
-.main-banner .swiper-wrapper {
-  height: 100%;
-  padding: 10px 0 35px;
-}
-
-.main-banner .swiper-slide {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  border-radius: 0.625rem !important;
-}
-
-.main-banner .swiper-link {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.main-banner .swiper-img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  border-radius: 0.625rem;
-}
-
-.main-banner .swiper-button-prev,
-.swiper-rtl .swiper-button-next {
-  left: calc(25% + 0.25rem) !important;
-  transform: translateX(-50%);
-}
-
-.main-banner .swiper-button-next,
-.swiper-rtl .swiper-button-prev {
-  right: calc(25% - 3.7rem) !important;
-  transform: translateX(-50%);
-}
-
-.main-banner .swiper-button-next,
-.swiper-button-prev {
-  width: 64px !important;
-  height: 64px !important;
-  border-radius: 50%;
-  background-color: rgb(0 0 0/0.8) !important;
-}
-
-.main-banner .swiper-button-next::after,
-.swiper-button-prev::after {
-  display: none;
-}
-
-.main-banner .swiper-button-next::before,
-.swiper-button-prev::before {
-  content: '';
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  width: 24px;
-  height: 24px;
-  background-image: url('../asset/icons/prev-arrow.svg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-}
-
-.main-banner .swiper-button-next::before {
-  transform: translate(-50%, -50%) scale(-1, 1);
-}
-
-.main-banner .swiper-slide-shadow-left.swiper-slide-shadow-coverflow {
-  border-radius: 0.625rem;
-}
-
-.main-banner .swiper-slide-shadow-right.swiper-slide-shadow-coverflow {
-  border-radius: 0.625rem;
-}
-
-.main-banner .swiper-pagination-bullet {
-  width: 48px !important;
-  height: 3px !important;
-  border-radius: 0 !important;
-  background-color: rgba(0, 0, 0, 0.75);
-  transition: background-color 0.5s ease;
-}
-
-.main-banner .swiper-pagination-bullet.swiper-pagination-bullet-active,
-.product-slider .swiper-pagination-bullet.swiper-pagination-bullet-active {
-  background-color: rgba(0, 0, 0, 1);
-}
-
 .product-slider .swiper-wrapper {
   padding-bottom: 40px;
 }
@@ -281,4 +184,10 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+}
+
+@media (max-width: 768px) {
+  .wrapper {
+    padding-top: 116px;
+  }
 }
