--- a/client/styles/searchForm.css
+++ b/client/styles/searchForm.css
@@ -20,3 +20,10 @@
   bottom: 0;
   left: 24px;
 }
+
+@media (max-width: 768px) {
+  .header__top .search {
+    order: 1;
+    max-width: 100%;
+  }
+}
