--- a/client/styles/contactBlock.css
+++ b/client/styles/contactBlock.css
@@ -1,6 +1,7 @@
 .contact-block {
   max-width: 420px;
   padding-top: 48px;
+  flex-shrink: 0;
 }
 
 .contact-block__title {
@@ -63,6 +64,8 @@
 .contact-block__item {
   display: flex;
   gap: 5px;
+  overflow-x: auto;
+  white-space: nowrap;
   align-items: center;
 }
 
@@ -72,4 +75,21 @@
 
 .contact-block__item dd {
   font-weight: 700;
+}
+
+@media (max-width: 992px) {
+  .contact-block {
+    max-width: 350px;
+  }
+}
+
+@media (max-width: 860px) {
+  .contact-block {
+    padding-top: 0;
+    max-width: 100%;
+  }
+
+  .contact-block__list {
+    margin-bottom: 15px;
+  }
 }
