--- a/client/styles/ProductCard.css
+++ b/client/styles/ProductCard.css
@@ -4,14 +4,20 @@
   border-radius: 1.5rem;
   max-width: 266px;
   width: 100%;
+  height: 100%;
+}
+
+.product-card__link {
+  display: block;
 }
 
 .product-card__img {
-  margin-bottom: 1rem;
+  margin: 0 auto 1rem;
 }
 
 .product-card__article {
   font-size: 12px;
+  display: flex;
 }
 
 .product-card__title {
@@ -38,7 +44,7 @@
   font-size: 12px;
   line-height: 1;
   padding: 0 0.5rem;
-  border-radius: .5rem;
+  border-radius: 0.5rem;
   min-height: 16px;
 }
 
@@ -67,4 +73,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+@media (max-width: 1400px) {
+  .product-card {
+    max-width: 100%;
+  }
 }
