--- a/client/styles/aboutContent.css
+++ b/client/styles/aboutContent.css
@@ -1,3 +1,7 @@
+.about {
+  padding-top: 10px;
+}
+
 .about__inner {
   display: flex;
   align-items: start;
@@ -10,6 +14,7 @@
   padding: 32px;
   background-color: #f4f6f7;
   border-radius: 8px;
+  flex-shrink: 0;
 }
 
 .about__list-item:not(:last-child) {
@@ -66,4 +71,10 @@
   right: auto;
   left: 0;
   width: 100%;
+}
+
+@media (max-width: 992px) {
+  .about__list {
+    display: none;
+  }
 }
