--- a/client/styles/categories.css
+++ b/client/styles/categories.css
@@ -15,3 +15,24 @@
   grid-row: 1/-1;
 }
 
+@media (max-width: 1400px) {
+  .categories__promo {
+    gap: 15px;
+  }
+}
+
+@media (max-width: 1200px) {
+  .categories__promo {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 630px) {
+  .categories__promo {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .categories__elem:first-child {
+    grid-column: 1/1;
+  }
+}
