--- a/client/styles/edges.css
+++ b/client/styles/edges.css
@@ -4,3 +4,16 @@
   align-items: center;
   gap: 15px;
 }
+
+@media (max-width: 1200px) {
+  .edges__list {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 580px) {
+  .edges__list {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
