--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -35,18 +35,20 @@ body {
 }
 
 .homepage-container__inner {
-  display: grid;
-  grid-template-columns: 1fr 3fr;
+  display: flex;
   gap: 30px;
 }
 
 .homepage-container__content {
   max-width: 1140px;
+  flex-shrink: 1;
+  min-width: 0;
 }
 
 .filterbar {
-  width: 300px;
-  flex-grow: 1;
+  width: 100%;
+  max-width: 300px;
+  flex-shrink: 0;
 }
 
 .container-fluid {
@@ -120,6 +122,11 @@ body {
   margin-bottom: 25px;
 }
 
+.product-slider {
+  max-width: 100%;
+  width: 100%;
+}
+
 .product-slider .swiper-wrapper {
   padding-bottom: 40px;
 }
@@ -130,7 +137,7 @@ body {
 }
 
 .contacts {
-  padding-top: 50px;
+  padding-top: 30px;
 }
 
 .contacts__inner {
@@ -138,6 +145,7 @@ body {
   justify-content: center;
   align-items: start;
   gap: 50px;
+  padding-top: 50px;
 }
 
 .profile {
@@ -151,9 +159,8 @@ body {
 
 .profile__content {
   width: 100%;
-  display: flex;
-  align-items: start;
-  flex-direction: column;
+  padding-top: 30px;
+  position: relative;
 }
 
 .profile__title {
@@ -162,6 +169,9 @@ body {
 }
 
 .profile__link {
+  position: absolute;
+  top: 0;
+  left: 0;
   font-size: 16px;
   font-weight: 500;
   text-transform: uppercase;
@@ -169,7 +179,6 @@ body {
   margin-bottom: 15px;
   order: -1;
   padding-left: 17px;
-  position: relative;
 }
 
 .profile__link::before {
@@ -184,6 +193,50 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+}
+
+.partner__link {
+  display: block;
+}
+
+.partner__img {
+  margin: 0 auto;
+}
+
+@media (max-width: 992px) {
+  .homepage-container__inner .filterbar {
+    display: none;
+  }
+
+  .section {
+    margin-bottom: 25px;
+  }
+
+  .profile__inner {
+    flex-wrap: wrap;
+    gap: 15px;
+  }
+
+  .profile__title {
+    font-size: 24px;
+  }
+}
+
+@media (max-width: 860px) {
+  .contacts {
+    padding-top: 10px;
+  }
+
+  .contacts__inner {
+    flex-wrap: wrap;
+    justify-content: start;
+    gap: 25px;
+    padding-top: 10px;
+  }
+
+  .title {
+    font-size: 24px;
+  }
 }
 
 @media (max-width: 768px) {
