--- a/client/styles/promo.css
+++ b/client/styles/promo.css
@@ -15,3 +15,9 @@
   object-fit: cover;
   transition: transform 0.5s ease;
 }
+
+@media (max-width: 992px) {
+  .promo__link:hover .promo__img {
+    transform: scale(1);
+  }
+}
