--- a/client/styles/userProfileLeftSideBar.css
+++ b/client/styles/userProfileLeftSideBar.css
@@ -1,6 +1,7 @@
 .user-sidebar {
   max-width: 200px;
   width: 100%;
+  flex-shrink: 0;
 }
 
 .user-sidebar__user-box {
@@ -73,4 +74,58 @@
 
 .user-sidebar__link:hover::before {
   height: 100%;
+}
+
+@media (max-width: 992px) {
+  .user-sidebar {
+    max-width: 100%;
+  }
+
+  .user-sidebar__list {
+    display: flex;
+    overflow-x: auto;
+    white-space: nowrap;
+    gap: 12px;
+  }
+
+  .user-sidebar__item:not(:last-child) {
+    margin-bottom: 0;
+  }
+
+  .user-sidebar__link {
+    padding: 12px;
+  }
+
+  .user-sidebar__link:hover {
+    font-weight: 400;
+  }
+
+  .user-sidebar__link.active:hover {
+    font-weight: 700;
+  }
+
+  .user-sidebar__link::before {
+    display: none;
+  }
+
+  .user-sidebar__link::after {
+    content: '';
+    position: absolute;
+    display: block;
+    left: 0;
+    bottom: 0;
+    top: auto;
+    transform: none;
+    width: 100%;
+    height: 2px;
+    background-color: transparent;
+  }
+
+  .user-sidebar__link.active::after {
+    background-color: #77ab1a;
+  }
+
+  .user-sidebar__user-box {
+    margin-bottom: 15px;
+  }
 }
