update auth - set cookies from the server

--- a/client/styles/Header.css
+++ b/client/styles/Header.css
@@ -5,7 +5,7 @@
   right: 0;
   z-index: 5;
   background-color: #fff;
-  padding-bottom: 10px;
+  padding-bottom: 5px;
   transform: translateY(-100%);
   transition: transform 0.5s ease;
 }
@@ -20,7 +20,7 @@
   align-items: center;
   width: 100%;
   gap: 10px;
-  padding: 20px 0;
+  padding: 15px 0;
 }
 
 .header__top * {
@@ -63,12 +63,12 @@
   min-height: 2.75rem;
   padding: 0 1.125rem;
   padding-left: 2.5rem;
-  max-width: 190px;
+  max-width: 180px;
   width: 100%;
 }
 
 .header__top-user {
-  max-width: 150px;
+  /* max-width: 150px; */
 }
 
 .header__top-link {
