--- a/client/styles/filterbar.css
+++ b/client/styles/filterbar.css
@@ -16,6 +16,7 @@
 
 .filterbar__btn {
   display: flex;
+  text-align: left;
   align-items: center;
   gap: 5px;
   padding: 15px;
@@ -24,7 +25,7 @@
   width: 100%;
   font-size: 16px;
   background-color: #f1f3f4;
-  line-height: 1;
+  line-height: 19px;
   position: relative;
   padding-left: 38px;
   padding-right: 40px;
